Update terms link

--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -225,7 +225,7 @@
                 <img src="/static/images/logo.png" alt="Clyne" class="w-10 h-10 rounded-full">
                 <span class="text-xl font-bold bg-gradient-to-r from-gold to-yellow-500 bg-clip-text text-transparent">Clyne</span>
             </a>
-            <a href="/terms-of-service">Terms of Service</a>
+            <a href="/templates/terms-of-service">Terms of Service</a>
         </div>
     </nav>
 
